# ChangeLog for media-libs/alsa-lib
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/alsa-lib/ChangeLog,v 1.259 2008/05/13 14:48:12 beandog Exp $

  13 May 2008; Steve Dibb <beandog@gentoo.org> alsa-lib-1.0.16.ebuild:
  amd64 stable, bug 217075

*alsa-lib-1.0.16-r1 (13 May 2008)

  13 May 2008; Steve Dibb <beandog@gentoo.org> +alsa-lib-1.0.16-r1.ebuild:
  Add python use flag, bug 217075

  18 Apr 2008; Ferris McCormick <fmccor@gentoo.org> alsa-lib-1.0.16.ebuild:
  Sparc stable, Bug #217075.

  16 Apr 2008; Tobias Klausmann <klausman@gentoo.org>
  alsa-lib-1.0.16.ebuild:
  Stable on alpha, bug #217075

  15 Apr 2008; Jeroen Roovers <jer@gentoo.org> alsa-lib-1.0.16.ebuild:
  Stable for HPPA (bug #217075).

  12 Apr 2008; nixnut <nixnut@gentoo.org> alsa-lib-1.0.16.ebuild:
  Stable on ppc wrt bug 217075

  12 Apr 2008; Mike Doty <kingtaco@gentoo.org> alsa-lib-1.0.16.ebuild:
  x86 stable, bug 217075.

  11 Apr 2008; Markus Rothe <corsair@gentoo.org> alsa-lib-1.0.16.ebuild:
  Stable on ppc64; bug #217075

  17 Mar 2008; <ricmm@gentoo.org> alsa-lib-1.0.13.ebuild,
  alsa-lib-1.0.14_rc2.ebuild, alsa-lib-1.0.14_rc3.ebuild,
  alsa-lib-1.0.14a-r1.ebuild:
  Drop to ~mips due to unstable deps

*alsa-lib-1.0.16 (12 Mar 2008)

  12 Mar 2008; Tony Vroon <chainsaw@gentoo.org> +alsa-lib-1.0.16.ebuild:
  Version bump, for bug #210249.

*alsa-lib-1.0.16_rc2 (30 Jan 2008)
*alsa-lib-1.0.16_rc1 (30 Jan 2008)

  30 Jan 2008; Tony Vroon <chainsaw@gentoo.org> +alsa-lib-1.0.16_rc1.ebuild,
  +alsa-lib-1.0.16_rc2.ebuild:
  Adding 1.0.16 release candidates, for bug #207427.

  10 Jan 2008; Mike Frysinger <vapier@gentoo.org> alsa-lib-1.0.15.ebuild:
  Since uclibc does not support symbol versioning, make sure to disable
  versioned symbols for it.

  19 Nov 2007; Joshua Kinard <kumba@gentoo.org> alsa-lib-1.0.14a-r1.ebuild:
  Stable on mips.

  24 Oct 2007; Steve Dibb <beandog@gentoo.org> alsa-lib-1.0.13.ebuild,