@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/alsa-lib
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/alsa-lib/ChangeLog,v 1.259 2008/05/13 14:48:12 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/alsa-lib/ChangeLog,v 1.260 2008/06/05 07:41:25 armin76 Exp $
+
+  05 Jun 2008; Raúl Porcel <armin76@gentoo.org> alsa-lib-1.0.16.ebuild:
+  ia64 stable
 
   13 May 2008; Steve Dibb <beandog@gentoo.org> alsa-lib-1.0.16.ebuild:
   amd64 stable, bug 217075
